white space solved

--- a/components/Podcasts/podcast.css
+++ b/components/Podcasts/podcast.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 524px) {
+/* @media screen and (max-width: 524px) {
     .wholecont {
       margin-top: 100px !important;
     }
@@ -8,7 +8,7 @@
   .wholecont {
     margin-top: 150px !important;
   }
-}
+} */
 
 .hdng {
   font-family:'Poppins', sans-serif;
